--- a/python-school/functions/fun1-def-sol.ipynb
+++ b/python-school/functions/fun1-def-sol.ipynb
@@ -1277,7 +1277,7 @@
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
     "\n",
-    "`s = s.upper()` only MODIFIES the assignment `s` of the function call frame, it has no effect on outside world\n",
+    "`s = s.upper()` only MODIFIES the assignment `s` of the function call's frame, it has no effect on anything outside of it.\n",
     "\n",
     "```"
    ]
@@ -1357,7 +1357,7 @@
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
     "\n",
-    "`external_string = s.upper()` creates NEW variable `external_string` inside frame of function call\n",
+    "`external_string = s.upper()` creates a new variable `external_string` inside the frame of the function call.\n",
     "\n",
     "```"
    ]
@@ -1523,7 +1523,7 @@
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
     "\n",
-    "`element` is created as a NEW variable in the function call frame, doesn't change original cells\n",
+    "`element` is created as a NEW variable in the function call's frame, which doesn't change the elements from the original list.\n",
     "\n",
     "```"
    ]
@@ -1600,8 +1600,8 @@
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
     "\n",
-    "* `tmp = []` creates a NEW list, but function text tells to MODIFY \n",
-    "* `lst = tmp`  Violates [IV COMANDMENT](https://en.softpython.org/commandments.html#IV-COMMANDMENT): sets the variable `lst` in the call frame to point to `tmp`, but both will be lost after the function call is over\n",
+    "- `tmp = []` creates a NEW list, while the function is supposed to MODIFY an existing one.\n",
+    "- `lst = tmp`  Violates [IV COMANDMENT](https://en.softpython.org/commandments.html#IV-COMMANDMENT): sets the variable `lst` in the call frame to point to `tmp`, but both will be lost after the function call is over.\n",
     "\n",
     "```"
    ]
@@ -1637,15 +1637,15 @@
    "source": [
     "%%tutor\n",
     "\n",
-    "external_numbers = [10,20,30]\n",
+    "external_numbers = [10, 20, 30]\n",
     "\n",
     "def double(lst):\n",
     "    tmp = []\n",
     "    for element in lst:\n",
-    "        tmp.append(element * 2)   \n",
-    "                                 \n",
-    "    lst = tmp                     \n",
-    "    \n",
+    "        tmp.append(element * 2)\n",
+    "\n",
+    "    lst = tmp\n",
+    "\n",
     "double(external_numbers)"
    ]
   },
@@ -1682,8 +1682,8 @@
     ":class: tip dropdown\n",
     "\n",
     "\n",
-    "* `tmp = []`   creates a NEW list,  but function text tells to MODIFY \n",
-    "* `external_numbers = tmp`    creates a NEW association `external_numbers` inside function call frame, but it will be lost after the function call is over                                  \n",
+    "- `tmp = []` creates a NEW list, while the function is supposed to MODIFY an existing one. \n",
+    "- `external_numbers = tmp` creates a NEW association `external_numbers` inside the function call's frame, but it will be lost after the function call is over.                                \n",
     "\n",
     "```"
    ]
@@ -1764,14 +1764,15 @@
     ":class: tip dropdown\n",
     "\n",
     "```python\n",
-    "external_numbers = [10,20,30]\n",
+    "external_numbers = [10, 20, 30]\n",
     "\n",
     "def double(lst):\n",
-    "    tmp = []                      # WRONG: we are creating a NEW list, text tells to MODIFY \n",
+    "    tmp = [] # Wrong: we are creating a NEW list, while the function is upposed to\n",
+    "             # modify an existing one.\n",
     "    for element in lst:\n",
-    "        tmp.append(element * 2)   # WRONG: we are modifying a NEW list\n",
+    "        tmp.append(element * 2)\n",
     "                                 \n",
-    "    return tmp                    # WRONG: text didn't ask you to RETURN anything                                   \n",
+    "    return tmp # Wrong: the function is not supposed to return anything.                                   \n",
     "    \n",
     "external_numbers = double(external_numbers)  # WRONG: even if external_numbers association will \n",
     "                                             # actually  point  to a list of doubled numbers, \n",
@@ -1830,7 +1831,7 @@
    "id": "736d21aa",
    "metadata": {},
    "source": [
-    "Probably you are a bit confused about the previous attempt, which to the untrained eye might look successful. Let's try to rewrite it with one variable more `saved` which will point to exactly the same original memory region of `external_numbers`. You will see that at the end `saved` will point to `[10,20,30]`, showing we didn't actually MODIFY the original region.\n"
+    "Probably you are a bit confused about the previous attempt, which to the untrained eye might look successful. Let's try to rewrite it with one variable more `saved` which will point to exactly the same original memory region of `external_numbers`. You will see that at the end `saved` will point to `[10,20,30]`, showing we didn't actually MODIFY the original data."
    ]
   },
   {
@@ -1885,7 +1886,7 @@
    "source": [
     "### Doubling success!\n",
     "\n",
-    "Let's finally see the right way to do it: we need to consider we want to refer to original cells, so to do it properly we need to access them _by index_, and we will need a `for in` range."
+    "Let's finally see the right way to do it: we need to consider we want to refer to original cells, so to do it properly we need to access them _by index_, and we will need a `for ... in range(...)`."
    ]
   },
   {
@@ -1939,10 +1940,7 @@
     "- the `external_list` actually changed, without ever reassigning it (not even outside)\n",
     "- we didn't reassign `lst = ` inside the function body, as the [IV COMMANDMENT](https://en.softpython.org/commandments.html#IV-COMMANDMENT) prescribes not to reassign parameters\n",
     "- we didn't use `return`, as the function text told us nothing about returning\n",
-    "- we didn't referred to `external_list` inside the function body: doing so would have defeated the purpose of functions, which is to isolate them from outside world.\n",
-    "\n",
-    "\n",
-    "In general, in the case of mutable data data isolation is never tight, as we get pointers to data living outside the function frame. When we manipulate pointers it's really up to us to take special care."
+    "- we didn't referred to `external_list` inside the function body: doing so would have defeated the purpose of functions, which is to isolate them from outside world."
    ]
   },
   {
