Add comment on built-in functions

--- a/python-school/functions/fun1-def-sol.ipynb
+++ b/python-school/functions/fun1-def-sol.ipynb
@@ -126,6 +126,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e6b24a9",
+   "metadata": {},
+   "source": [
+    "Which is exactly the same way you've called functions like `print` until now.\n",
+    "The only difference here is that *you* defined `fun`, while `print` was defined by the developers of the Python language (we say that the `print` function is a *built-in* function of Python)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35f89697",
+   "metadata": {},
+   "source": [
+    "```{seealso}\n",
+    "You can consult the [whole list of built-in functions](https://docs.python.org/3/library/functions.html) in the Python documentation.\n",
+    "[Here's the documentation for `print`](https://docs.python.org/3/library/functions.html#print), for instance.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6643cbab",
    "metadata": {},
    "source": [
