--- a/python-school/4-numpy/sol-2-numpy-exercises.ipynb
+++ b/python-school/4-numpy/sol-2-numpy-exercises.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "418ebe6c",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4481e37c",
    "metadata": {
     "tags": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "520cc7e6",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0ab1af04",
    "metadata": {
     "tags": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b82986ce",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fade3997",
    "metadata": {
     "tags": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bd2c03eb",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ea7c410a",
    "metadata": {
     "tags": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a4b91dab",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "33914c3a",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0eb22b86",
    "metadata": {
     "tags": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "45ef88e6",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "       [7., 1., 7., 9.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "601aec0e",
    "metadata": {},
    "outputs": [],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "fc78e700",
    "metadata": {
     "tags": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "2f55e469",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
        "       [12.,  6.,  8.,  6.]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "37f73ce5",
    "metadata": {},
    "outputs": [],
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "310ef5bd",
    "metadata": {
     "tags": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "be1a3636",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
        "       [0., 1., 0., 1.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "4c1468cc",
    "metadata": {},
    "outputs": [],
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "9ff99fed",
    "metadata": {
     "tags": [
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "d1c1bcec",
    "metadata": {},
    "outputs": [
@@ -750,7 +750,7 @@
        "       [10., 16.,  9.,  6.]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "06b42a97",
    "metadata": {},
    "outputs": [],
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "1d8fb6e4",
    "metadata": {
     "tags": [
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "448a1362",
    "metadata": {},
    "outputs": [],
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "62971821",
    "metadata": {
     "tags": [
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "e59011b7",
    "metadata": {},
    "outputs": [],
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "f828f2e5",
    "metadata": {
     "tags": [
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "bf004029",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1018,7 @@
        "array([5, 4, 8])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "d1179ab2",
    "metadata": {},
    "outputs": [],
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "22ac61ae",
    "metadata": {
     "tags": [
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "fb440470",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1145,7 @@
        "       [8, 7, 9]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "5f7234dc",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "12c544eb",
    "metadata": {
     "tags": [
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "b3700a13",
    "metadata": {},
    "outputs": [],
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "22dd1979",
    "metadata": {
     "tags": [
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "8252729c",
    "metadata": {},
    "outputs": [
@@ -1424,7 +1424,7 @@
        "       [0., 1., 2., 3., 4., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "e8d982f5",
    "metadata": {},
    "outputs": [],
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "39fd832d",
    "metadata": {},
    "outputs": [],
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "68c1bcb8",
    "metadata": {},
    "outputs": [
@@ -1536,7 +1536,7 @@
        "array([6., 3., 4., 2., 4., 5., 3., 9., 7.])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "bae14b36",
    "metadata": {},
    "outputs": [],
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "64dd2c6a",
    "metadata": {
     "tags": [
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "79f6acd0",
    "metadata": {},
    "outputs": [],
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "ee18a606",
    "metadata": {
     "tags": [
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "4ab01830",
    "metadata": {},
    "outputs": [
@@ -1718,7 +1718,7 @@
        "       [ 9,  7,  7]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "4ef6606e",
    "metadata": {},
    "outputs": [],
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "69daa7bb",
    "metadata": {
     "tags": [
@@ -1814,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "65c271a5",
    "metadata": {},
    "outputs": [
@@ -1828,7 +1828,7 @@
        "       [2, 3, 9, 7, 2]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1848,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "da982024",
    "metadata": {},
    "outputs": [],
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "769f9840",
    "metadata": {
     "tags": [
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "11f71947",
    "metadata": {},
    "outputs": [
@@ -1939,7 +1939,7 @@
        "array([4., 3., 8., 5., 2., 7., 3., 8., 4., 6., 5., 7.])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "9eefb5ab",
    "metadata": {},
    "outputs": [],
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "279f5b29",
    "metadata": {
     "tags": [
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "bbb48ee4",
    "metadata": {},
    "outputs": [
@@ -2038,7 +2038,7 @@
        "array([5., 1., 6., 5., 2., 7., 3., 8., 4., 2., 8., 5.])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "0dd28583",
    "metadata": {},
    "outputs": [],
@@ -2132,8 +2132,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
