--- a/python-school/3-data-files/1-line-files.ipynb
+++ b/python-school/3-data-files/1-line-files.ipynb
@@ -110,14 +110,14 @@
     "The `with` defines a block with instructions inside:\n",
     "\n",
     "```python\n",
-    "with open(\"data/people-simple.txt\", encoding=\"utf-8\") as f:\n",
-    "    line = f.readline()\n",
+    "with open(\"data/people-simple.txt\", encoding=\"utf-8\") as file:\n",
+    "    line = file.readline()\n",
     "    print(line)\n",
     "```\n",
     "\n",
     "`with` is used to create a *context* in which to execute the indented block of code that follows it.\n",
     "When we go back to the normal indentation level, we leave this context block.\n",
-    "The context here is simply that a file is open, and that you can do stuff with it through the variable called `f`."
+    "The context here is simply that a file is open, and that you can do stuff with it through the variable called `file`."
    ]
   },
   {
@@ -125,7 +125,7 @@
    "metadata": {},
    "source": [
     "```{admonition} Question\n",
-    "When we are out of this context, what happens then to the file and to the variable `f`?\n",
+    "When we are out of this context, what happens then to the file and to the variable `file`?\n",
     "```"
    ]
   },
@@ -135,7 +135,7 @@
    "source": [
     "```{admonition} Question\n",
     "Let's now see this in practice.\n",
-    "Before running the following cell, try to guess what happens when we try reading another line with `f`.\n",
+    "Before running the following cell, try to guess what happens when we try reading another line with `file`.\n",
     "```"
    ]
   },
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Properly closing a file avoids to waste memory resources and creating hard to find paranormal errors. If you want to avoid hunting for never closed zombie files, always remember to open all files in `with` blocks! Furthermore, at the end of the row in the part `as f:` we assigned the file to a variable hereby called `f`, but we could have used any other name we liked."
+    "Properly closing a file avoids to waste memory resources and creating hard to find paranormal errors. If you want to avoid hunting for never closed zombie files, always remember to open all files in `with` blocks! Furthermore, at the end of the row in the part `as file:` we assigned the file to a variable hereby called `file`, but we could have used any other name we liked."
    ]
   },
   {
@@ -169,7 +169,7 @@
     "```\n",
     "\n",
     "```{warning}\n",
-    "Depending on the editor you use, by pressing `<Tab>` you might get a sequence o f white spaces like it happens in Jupyter (4 spaces which is the recommended length), or a special tabulation character (to avoid)! As annoying as this distinction might appear, remember it because it might generate very hard to find errors.\n",
+    "Depending on the editor you use, by pressing `<Tab>` you might get a sequence o file white spaces like it happens in Jupyter (4 spaces which is the recommended length), or a special tabulation character (to avoid)! As annoying as this distinction might appear, remember it because it might generate very hard to find errors.\n",
     "```\n",
     "\n",
     "```{warning}\n",
@@ -186,11 +186,11 @@
     "The command\n",
     "\n",
     "```\n",
-    "    line = f.readline()\n",
+    "    line = file.readline()\n",
     "```\n",
     "puts in the variable `line` the entire first line, like a string. Warning: the string will contain at the end the special character of line return!\n",
     "\n",
-    "You might wonder where that `.readline()` comes from. Like everything in Python, our variable `f` which represents the file we just opened is an object, and like any object, depending on its type, it has particular methods we can use on it. In this case the method is `.readline()`. \n",
+    "You might wonder where that `.readline()` comes from. Like everything in Python, our variable `file` which represents the file we just opened is an object, and like any object, depending on its type, it has particular methods we can use on it. In this case the method is `.readline()`. \n",
     "\n",
     "The following command prints the string content:\n",
     "\n",
@@ -210,11 +210,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**✪ 1.2 EXERCISE**: you might be wondering what exactly is that `f`, and what exactly the method `readline` should be doing. When you find yourself in these situations, you might help yourself with functions `type` and `help`. This time, directly copy paste the same code here, but insert inside `with` block the commands:\n",
+    "**✪ 1.2 EXERCISE**: you might be wondering what exactly is that `file`, and what exactly the method `readline` should be doing. When you find yourself in these situations, you might help yourself with functions `type` and `help`. This time, directly copy paste the same code here, but insert inside `with` block the commands:\n",
     "\n",
-    "* `print(type(f))`\n",
-    "* `help(f)`\n",
-    "* `help(f.readline)`      # Attention: remember the f. before the readline !!\n",
+    "* `print(type(file))`\n",
+    "* `help(file)`\n",
+    "* `help(file.readline)`      # Attention: remember the file. before the readline !!\n",
     "\n",
     "Every time you add something, try to execute with Control+Enter and see what happens"
    ]
@@ -368,9 +368,9 @@
     "```python\n",
     "while line != \"\":                   # enter cycle if line contains characters\n",
     "    name = line.rstrip()            # parses the name\n",
-    "    surname = f.readline().rstrip()   # reads next line and parses surname\n",
-    "    print(f\"{name} {surname}\")\n",
-    "    line = f.readline()               # read next line\n",
+    "    surname = file.readline().rstrip()   # reads next line and parses surname\n",
+    "    print(file\"{name} {surname}\")\n",
+    "    line = file.readline()               # read next line\n",
     "```"
    ]
   },
@@ -391,7 +391,7 @@
     "**✪✪ 1.4 EXERCISE**: We just presented the approach above to make things explicit. However, there are two more idiomatic ways to iterate over lines which involve a `for` loop. Try to rewrite the code above, this time using a `for` loop.\n",
     "\n",
     "```{hint}\n",
-    "Start by inspecting all methods of `f` using `dir(f)`, or the cell magic `?f.*`. Can you find the two methods that could help you? Also, experiment with random ideas of how to use the `for` loop, one of them might just work!\n",
+    "Start by inspecting all methods of `file` using `dir(file)`, or the cell magic `?file.*`. Can you find the two methods that could help you? Also, experiment with random ideas of how to use the `for` loop, one of them might just work!\n",
     "```"
    ]
   },
@@ -423,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We passed the content of this new file to `f.write()`, which is here an empty string.\n",
+    "We passed the content of this new file to `file.write()`, which is here an empty string.\n",
     "Now let's read this file to check everything went correctly:"
    ]
   },
