--- a/python-school/1-functions/1-defining-functions.ipynb
+++ b/python-school/1-functions/1-defining-functions.ipynb
@@ -126,6 +126,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e6b24a9",
+   "metadata": {},
+   "source": [
+    "Which is exactly the same way you've called functions like `print` until now.\n",
+    "The only difference here is that *you* defined `fun`, while `print` was defined by the developers of the Python language (we say that the `print` function is a *built-in* function of Python)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35f89697",
+   "metadata": {},
+   "source": [
+    "```{seealso}\n",
+    "You can consult the [whole list of built-in functions](https://docs.python.org/3/library/functions.html) in the Python documentation.\n",
+    "[Here's the documentation for `print`](https://docs.python.org/3/library/functions.html#print), for instance.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6643cbab",
    "metadata": {},
    "source": [
@@ -328,7 +348,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc8522f0>"
+       "<IPython.lib.display.IFrame at 0x745cf46224d0>"
       ]
      },
      "metadata": {},
@@ -666,7 +686,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fdc2aef0>"
+       "<IPython.lib.display.IFrame at 0x745d0439eaa0>"
       ]
      },
      "metadata": {},
@@ -722,7 +742,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc808250>"
+       "<IPython.lib.display.IFrame at 0x745cf47c1810>"
       ]
      },
      "metadata": {},
@@ -784,7 +804,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc92e5f0>"
+       "<IPython.lib.display.IFrame at 0x745d040ef9d0>"
       ]
      },
      "metadata": {},
@@ -844,7 +864,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc9da7a0>"
+       "<IPython.lib.display.IFrame at 0x745cf460b820>"
       ]
      },
      "metadata": {},
@@ -906,7 +926,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fdc2aef0>"
+       "<IPython.lib.display.IFrame at 0x745d0439eaa0>"
       ]
      },
      "metadata": {},
@@ -1122,7 +1142,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc896080>"
+       "<IPython.lib.display.IFrame at 0x745cf47aca00>"
       ]
      },
      "metadata": {},
@@ -1198,7 +1218,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc897bb0>"
+       "<IPython.lib.display.IFrame at 0x745d041c6fe0>"
       ]
      },
      "metadata": {},
@@ -1261,7 +1281,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc896b30>"
+       "<IPython.lib.display.IFrame at 0x745d041c7340>"
       ]
      },
      "metadata": {},
@@ -1314,7 +1334,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc896080>"
+       "<IPython.lib.display.IFrame at 0x745d041c50c0>"
       ]
      },
      "metadata": {},
@@ -1410,7 +1430,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc894160>"
+       "<IPython.lib.display.IFrame at 0x745d041c7340>"
       ]
      },
      "metadata": {},
@@ -1462,7 +1482,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"500\"\n",
-       "            src=\"https://pythontutor.com/iframe-embed.html#code=%0Aexternal_numbers%20%3D%20%5B10%2C20%2C30%5D%0A%0Adef%20double%28lst%29%3A%0A%20%20%20%20tmp%20%3D%20%5B%5D%0A%20%20%20%20for%20element%20in%20lst%3A%0A%20%20%20%20%20%20%20%20tmp.append%28element%20%2A%202%29%20%20%20%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%0A%20%20%20%20lst%20%3D%20tmp%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%0A%20%20%20%20%0Adouble%28external_numbers%29%0A&origin=opt-frontend.js&cumulative=false&heapPrimitives=false&textReferences=false&py=3&rawInputLstJSON=%5B%5D&curInstr=0&codeDivWidth=350&codeDivHeight=400\"\n",
+       "            src=\"https://pythontutor.com/iframe-embed.html#code=%0Aexternal_numbers%20%3D%20%5B10%2C%2020%2C%2030%5D%0A%0Adef%20double%28lst%29%3A%0A%20%20%20%20tmp%20%3D%20%5B%5D%0A%20%20%20%20for%20element%20in%20lst%3A%0A%20%20%20%20%20%20%20%20tmp.append%28element%20%2A%202%29%0A%0A%20%20%20%20lst%20%3D%20tmp%0A%0Adouble%28external_numbers%29%0A&origin=opt-frontend.js&cumulative=false&heapPrimitives=false&textReferences=false&py=3&rawInputLstJSON=%5B%5D&curInstr=0&codeDivWidth=350&codeDivHeight=400\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -1470,7 +1490,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc895870>"
+       "<IPython.lib.display.IFrame at 0x745d041c5510>"
       ]
      },
      "metadata": {},
@@ -1480,15 +1500,15 @@
    "source": [
     "%%tutor\n",
     "\n",
-    "external_numbers = [10,20,30]\n",
+    "external_numbers = [10, 20, 30]\n",
     "\n",
     "def double(lst):\n",
     "    tmp = []\n",
     "    for element in lst:\n",
-    "        tmp.append(element * 2)   \n",
-    "                                 \n",
-    "    lst = tmp                     \n",
-    "    \n",
+    "        tmp.append(element * 2)\n",
+    "\n",
+    "    lst = tmp\n",
+    "\n",
     "double(external_numbers)"
    ]
   },
@@ -1533,7 +1553,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc896080>"
+       "<IPython.lib.display.IFrame at 0x745d041c7340>"
       ]
      },
      "metadata": {},
@@ -1596,7 +1616,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc896080>"
+       "<IPython.lib.display.IFrame at 0x745d0439e680>"
       ]
      },
      "metadata": {},
@@ -1623,7 +1643,7 @@
    "id": "736d21aa",
    "metadata": {},
    "source": [
-    "Probably you are a bit confused about the previous attempt, which to the untrained eye might look successful. Let's try to rewrite it with one variable more `saved` which will point to exactly the same original memory region of `external_numbers`. You will see that at the end `saved` will point to `[10,20,30]`, showing we didn't actually MODIFY the original region.\n"
+    "Probably you are a bit confused about the previous attempt, which to the untrained eye might look successful. Let's try to rewrite it with one variable more `saved` which will point to exactly the same original memory region of `external_numbers`. You will see that at the end `saved` will point to `[10,20,30]`, showing we didn't actually MODIFY the original data."
    ]
   },
   {
@@ -1647,7 +1667,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc8948b0>"
+       "<IPython.lib.display.IFrame at 0x745cf47f0970>"
       ]
      },
      "metadata": {},
@@ -1678,7 +1698,7 @@
    "source": [
     "### Doubling success!\n",
     "\n",
-    "Let's finally see the right way to do it: we need to consider we want to refer to original cells, so to do it properly we need to access them _by index_, and we will need a `for in` range."
+    "Let's finally see the right way to do it: we need to consider we want to refer to original cells, so to do it properly we need to access them _by index_, and we will need a `for ... in range(...)`."
    ]
   },
   {
@@ -1702,7 +1722,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc897bb0>"
+       "<IPython.lib.display.IFrame at 0x745d041c5510>"
       ]
      },
      "metadata": {},
@@ -1732,10 +1752,7 @@
     "- the `external_list` actually changed, without ever reassigning it (not even outside)\n",
     "- we didn't reassign `lst = ` inside the function body, as the [IV COMMANDMENT](https://en.softpython.org/commandments.html#IV-COMMANDMENT) prescribes not to reassign parameters\n",
     "- we didn't use `return`, as the function text told us nothing about returning\n",
-    "- we didn't referred to `external_list` inside the function body: doing so would have defeated the purpose of functions, which is to isolate them from outside world.\n",
-    "\n",
-    "\n",
-    "In general, in the case of mutable data data isolation is never tight, as we get pointers to data living outside the function frame. When we manipulate pointers it's really up to us to take special care."
+    "- we didn't referred to `external_list` inside the function body: doing so would have defeated the purpose of functions, which is to isolate them from outside world."
    ]
   },
   {
@@ -2244,7 +2261,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc895300>"
+       "<IPython.lib.display.IFrame at 0x745cf47aeb30>"
       ]
      },
      "metadata": {},
@@ -2297,7 +2314,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7db1fc8245e0>"
+       "<IPython.lib.display.IFrame at 0x745cf477d720>"
       ]
      },
      "metadata": {},
