--- a/python-school/1-functions/1-defining-functions.ipynb
+++ b/python-school/1-functions/1-defining-functions.ipynb
@@ -1772,18 +1772,10 @@
    "id": "ddc0dc49",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def zam(bal):\n",
     "    bal = 4\n",
@@ -1798,18 +1790,10 @@
    "id": "87ffa1a3",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def zom(y):\n",
     "    y = 4\n",
@@ -1824,23 +1808,11 @@
    "id": "8a0a3041",
    "metadata": {
     "tags": [
-     "hide-ouput",
-     "raises-exception"
+     "raises-exception",
+     "hide-output"
     ]
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'la' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[41], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mper\u001b[39m(la):\n\u001b[1;32m      2\u001b[0m     la\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msi\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m per(\u001b[43mla\u001b[49m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(la)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'la' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def per(la):\n",
     "    la.append(\"si\")\n",
@@ -1854,18 +1826,10 @@
    "id": "84ad2073",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['a', 'b', 'c', 'd']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def zeb(lst):\n",
     "    lst.append(\"d\")\n",
@@ -1880,18 +1844,10 @@
    "id": "69b5c52d",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['d', 'a', 'm', 'n']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def beware(la):\n",
     "    la = [\"?\", \"?\"]\n",
@@ -1906,18 +1862,10 @@
    "id": "3eaeea4a",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gnappa\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def umpa(string):\n",
     "    string = \"lompa\"\n",
@@ -1932,18 +1880,10 @@
    "id": "06dec728",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'rackets': 4, 'balls': 7, 'sneakers': 2}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sporty(diz):\n",
     "    diz[\"sneakers\"] = 2\n",
@@ -1958,19 +1898,10 @@
    "id": "d003c62f",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "[1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def numma(lst):\n",
     "    lst + [4,5]\n",
@@ -1985,19 +1916,10 @@
    "id": "07d86ccc",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5]\n",
-      "[1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def jar(lst):\n",
     "    return lst + [4,5]\n",
