--- a/python-school/1-functions/sol-1-defining-functions.ipynb
+++ b/python-school/1-functions/sol-1-defining-functions.ipynb
@@ -1980,7 +1980,7 @@
    "id": "ddc0dc49",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
    "outputs": [
@@ -2006,7 +2006,7 @@
    "id": "87ffa1a3",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
    "outputs": [
@@ -2032,8 +2032,8 @@
    "id": "8a0a3041",
    "metadata": {
     "tags": [
-     "hide-ouput",
-     "raises-exception"
+     "raises-exception",
+     "hide-output"
     ]
    },
    "outputs": [
@@ -2062,7 +2062,7 @@
    "id": "84ad2073",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
    "outputs": [
@@ -2088,7 +2088,7 @@
    "id": "69b5c52d",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
    "outputs": [
@@ -2114,7 +2114,7 @@
    "id": "3eaeea4a",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
    "outputs": [
@@ -2140,7 +2140,7 @@
    "id": "06dec728",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
    "outputs": [
@@ -2166,7 +2166,7 @@
    "id": "d003c62f",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
    "outputs": [
@@ -2193,7 +2193,7 @@
    "id": "07d86ccc",
    "metadata": {
     "tags": [
-     "hide-ouput"
+     "hide-output"
     ]
    },
    "outputs": [
