add function def illustration

--- a/python-school/1-functions/sol-1-defining-functions.ipynb
+++ b/python-school/1-functions/sol-1-defining-functions.ipynb
@@ -409,6 +409,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d1f57b2",
+   "metadata": {},
+   "source": [
+    "![](img/function.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f1d8cb56",
    "metadata": {},
    "source": [
